fix: use proper spacing for defs and tokens

--- a/components/Entry/Def.module.css
+++ b/components/Entry/Def.module.css
@@ -2,8 +2,9 @@
   @apply not-italic;
 }
 
+.def ~ span,
 span ~ .def {
-  /*@apply ml-1;*/
+  @apply ml-1;
 }
 
 .def:not(:only-child) {
